minor UI changes

--- a/index.html
+++ b/index.html
@@ -336,10 +336,7 @@
             </div>
             <div>
               <div class="flex flex-wrap gap-4 xl:gap-5 pb-20">
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -363,17 +360,16 @@
                       class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/1.jpg"
-                    alt="1"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/1.jpg"
+                      alt="1"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -384,30 +380,29 @@
                     Premium
                   </div>
                   <div
-                    class="absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-500"
+                    class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-500"
                   >
                     <img
                       src="./assets/img/icons/folder.svg"
                       alt="Icon Folder"
-                      class="group[.selected]:hidden"
+                      class="folder-default"
                     />
                     <img
                       src="./assets/img/icons/folder-active.svg"
                       alt="Icon Folder"
-                      class="hidden group[.selected]:block"
+                      class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/2.jpg"
-                    alt="2"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/2.jpg"
+                      alt="2"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -428,17 +423,16 @@
                       class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/3.jpg"
-                    alt="3"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/3.jpg"
+                      alt="3"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -459,17 +453,16 @@
                       class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/4.jpg"
-                    alt="4"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/4.jpg"
+                      alt="4"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -490,17 +483,16 @@
                       class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/5.jpg"
-                    alt="5"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/5.jpg"
+                      alt="5"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -521,17 +513,16 @@
                       class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/6.jpg"
-                    alt="6"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/6.jpg"
+                      alt="6"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -552,47 +543,16 @@
                       class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/7.jpg"
-                    alt="7"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                  ><div
-                    class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
-                  >
-                    <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
-                    Appsumo Startups
-                  </div>
-                  <div
-                    class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-500"
-                  >
+                  <a href="#" class="cursor-default">
                     <img
-                      src="./assets/img/icons/folder.svg"
-                      alt="Icon Folder"
-                      class="folder-default"
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/7.jpg"
+                      alt="7"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
                     />
-                    <img
-                      src="./assets/img/icons/folder-active.svg"
-                      alt="Icon Folder"
-                      class="folder-selected"
-                    />
-                  </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/8.jpg"
-                    alt="8"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -613,17 +573,16 @@
                       class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/9.jpg"
-                    alt="9"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/8.jpg"
+                      alt="8"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -644,17 +603,16 @@
                       class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/10.jpg"
-                    alt="10"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
-                <a
-                  href="#"
-                  class="item-element group grow relative cursor-default"
-                >
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/9.jpg"
+                      alt="9"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
                   >
@@ -675,13 +633,45 @@
                       class="folder-selected"
                     />
                   </div>
-                  <img
-                    loading="lazy"
-                    src="./assets/img/gallery/christmas/11.jpg"
-                    alt="11"
-                    class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
-                  />
-                </a>
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/10.jpg"
+                      alt="10"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
+                <div class="item-element group grow relative">
+                  <div
+                    class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
+                  >
+                    <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+                    Appsumo Startups
+                  </div>
+                  <div
+                    class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-500"
+                  >
+                    <img
+                      src="./assets/img/icons/folder.svg"
+                      alt="Icon Folder"
+                      class="folder-default"
+                    />
+                    <img
+                      src="./assets/img/icons/folder-active.svg"
+                      alt="Icon Folder"
+                      class="folder-selected"
+                    />
+                  </div>
+                  <a href="#" class="cursor-default">
+                    <img
+                      loading="lazy"
+                      src="./assets/img/gallery/christmas/11.jpg"
+                      alt="11"
+                      class="rounded-lg h-[160px] md:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+                    />
+                  </a>
+                </div>
               </div>
             </div>
           </div>
