add navigation UI

--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
                 All images / images
               </div>
             </div>
-            <div>
-              <div class="flex flex-wrap gap-4 xl:gap-5 pb-20">
+            <div class="pb-20">
+              <div class="flex flex-wrap gap-4 xl:gap-5">
                 <div class="item-element group grow relative">
                   <div
                     class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
@@ -672,6 +672,25 @@
                     />
                   </a>
                 </div>
+              </div>
+              <div class="py-10 flex items-center gap-4 justify-center">
+                <img
+                  src="./assets/img/icons/arrow-down-black.svg"
+                  alt="Icon Prev"
+                  class="rotate-90 cursor-pointer p-2"
+                />
+                <input
+                  type="number"
+                  value="1"
+                  placeholder="1"
+                  class="w-20 border rounded p-1 text-center border-brand-body1"
+                />
+                <span class="text-brand-body1 font-light">of 29 pages</span>
+                <img
+                  src="./assets/img/icons/arrow-down-black.svg"
+                  alt="Icon Next"
+                  class="-rotate-90 cursor-pointer p-2"
+                />
               </div>
             </div>
           </div>
