--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               >
             </nav>
           </div>
-          <div class="flex items-center gap-2">
+          <div class="flex items-center gap-2 lg:hidden">
             <img
               src="./assets/img/icons/search-outline-black.svg"
               class="cursor-pointer p-2.5 md:hidden"
@@ -115,7 +115,7 @@
             <img
               src="./assets/img/icons/menu.svg"
               alt="Icon Menu"
-              class="cursor-pointer p-2.5 toggle-menu-mobile lg:hidden"
+              class="cursor-pointer p-2.5 toggle-menu-mobile"
             />
           </div>
         </div>
@@ -948,7 +948,10 @@
       </footer>
     </div>
 
-    <div id="menu-mobile" class="absolute top-16 z-[90] w-full hidden">
+    <div
+      id="menu-mobile"
+      class="fixed top-12 z-[90] w-full h-screen hidden overflow-y-scroll"
+    >
       <div class="p-8">
         <div class="bg-white rounded-lg shadow-2xl p-10 relative">
           <img
@@ -1021,7 +1024,7 @@
 
     <!-- Tailwind helpers -->
     <div class="hidden">
-      <span class="rotate-180"></span>
+      <span class="rotate-180 overflow-y-hidden"></span>
     </div>
     <!-- Assets -->
     <link rel="stylesheet" href="./dist/output.css" />
